Adding MSBuild Versioning

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /*/bin
 /LinqCube/LinqCube.csproj.user
 /LinqCube/LinqCube.*.nupkg
+/LinqCube/Properties/VersionInfo.Designer.cs
+/packages/MSBuildVersioning.1.0.34.0/MSBuildVersioning.1.0.34.0.nupkg
+/packages/MSBuildVersioning.1.0.34.0/content/Properties/VersionInfo.cs
+/packages/MSBuildVersioning.1.0.34.0/tools/Install.ps1
+/packages/NuGetPowerTools.*
