--- a/LinqCube/LinqCube.nuspec.in
+++ b/LinqCube/LinqCube.nuspec.in
@@ -10,7 +10,7 @@
     <projectUrl>http://code.google.com/p/linq-cube/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>LinqCube is a small utility library to define measures and dimensions in code an do in-memory cubes against LINQ queries.</description>
-    <releaseNotes>First package.</releaseNotes>
+    <releaseNotes>Add IntSumMeasure.</releaseNotes>
     <copyright>Copyright © 2011,2012 dasz.at OG</copyright>
     <tags>Linq Cube OLAP Library</tags>
   </metadata>
