--- a/publish/LinqCube.nuspec.template
+++ b/publish/LinqCube.nuspec.template
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>LinqCube is a small utility library to define measures and dimensions in code an do in-memory cubes against LINQ queries.</description>
     <releaseNotes>Add IntSumMeasure and DimensionEntry&lt;DateTime&gt; GetDateTimeEntry(this IDimensionEntryResult self).</releaseNotes>
-    <copyright>Copyright © 2011,2012 dasz.at OG</copyright>
+    <copyright>Copyright © 2015 dasz.at e.U.</copyright>
     <tags>Linq Cube OLAP Library</tags>
   </metadata>
   <files>
