--- a/LinqCube/LinqCube.csproj
+++ b/LinqCube/LinqCube.csproj
@@ -14,6 +14,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Version>1.2.1</Version>
     <PackageReleaseNotes>Support for .net 4.5</PackageReleaseNotes>
+    <PackageTags>Linq Cube OLAP Library</PackageTags>
   </PropertyGroup>
 
 </Project>
