--- a/LinqCube/LinqCube.csproj
+++ b/LinqCube/LinqCube.csproj
@@ -9,11 +9,11 @@
     <PackageProjectUrl>https://github.com/arthurzaczek/linq-cube</PackageProjectUrl>
     <RepositoryUrl>https://github.com/arthurzaczek/linq-cube</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>1.2.1.0</AssemblyVersion>
-    <FileVersion>1.2.1.0</FileVersion>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.2.1</Version>
-    <PackageReleaseNotes>Support for .net 4.5</PackageReleaseNotes>
+    <Version>1.3.0</Version>
+    <PackageReleaseNotes>Adding TimeSpan Measures, time dimension builder and some helper methods</PackageReleaseNotes>
     <PackageTags>Linq Cube OLAP Library</PackageTags>
   </PropertyGroup>
 
