--- a/LinqCube/LinqCube.csproj
+++ b/LinqCube/LinqCube.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.4;net45;net40</TargetFrameworks>
     <Authors>Arthur Zaczek</Authors>
     <Company>dasz.at e.U.</Company>
     <Description>LinqCube is a small utility library to define measures and dimensions in code an do in-memory cubes against LINQ queries.</Description>
@@ -9,11 +9,11 @@
     <PackageProjectUrl>https://github.com/arthurzaczek/linq-cube</PackageProjectUrl>
     <RepositoryUrl>https://github.com/arthurzaczek/linq-cube</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-    <FileVersion>1.3.0.0</FileVersion>
+    <AssemblyVersion>1.3.1.0</AssemblyVersion>
+    <FileVersion>1.3.1.0</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.3.0</Version>
-    <PackageReleaseNotes>Adding TimeSpan Measures, time dimension builder and some helper methods</PackageReleaseNotes>
+    <Version>1.3.1</Version>
+    <PackageReleaseNotes>Adding TimeSpan Measures, time dimension builder and some helper methods. Adding .net 4.0 Support</PackageReleaseNotes>
     <PackageTags>Linq Cube OLAP Library</PackageTags>
   </PropertyGroup>
 
